--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,288 +8,181 @@ proxies:
   - &id001
     name: 🇫🇷_FR_法国_1
     type: ss
-    server: 57.129.1.19
+    server: 51.159.221.227
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id002
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 45.150.65.34
-    port: 11285
-    password: yTzEeImDDKooThuQKhZjob
-    cipher: chacha20-ietf-poly1305
-  - &id003
     name: 🇫🇷_FR_法国_2
     type: ss
-    server: 62.210.88.148
+    server: 51.158.203.4
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id003
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 51.158.204.70
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id004
-    name: 🇫🇷_FR_法国_3
+    name: 🇺🇸_US_美国_1
     type: ss
-    server: 62.210.88.168
+    server: 89.187.181.179
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id005
     name: 🇫🇷_FR_法国_4
     type: ss
-    server: 51.159.221.203
+    server: 37.59.21.132
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id006
     name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 
-      UNLK2.LVWF8N-HH8E-2300-NMOO-D2E9NAOBEACN.9D8F269F96B25232-759CBB36D6548597.KAUFEN
-    port: 20352
-    udp: true
-    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
-    sni: 206.237.5.220
-    skip-cert-verify: true
-    network: tcp
+    type: ss
+    server: 38.75.136.135
+    port: 8090
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
   - &id007
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 38.75.136.135
+    port: 7001
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id008
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 38.75.136.135
+    port: 2376
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id009
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 38.75.136.135
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id010
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 38.75.136.135
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id011
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 38.75.136.135
+    port: 8000
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id012
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 38.75.136.135
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 38.75.136.135
+    port: 5601
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id014
+    name: 🇺🇸_US_美国_10
+    type: ss
+    server: 38.75.136.135
+    port: 5001
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇺🇸_US_美国_11
+    type: ss
+    server: 38.75.136.135
+    port: 8881
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id016
+    name: 🇺🇸_US_美国_12
+    type: ss
+    server: 38.75.136.135
+    port: 9102
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇺🇸_US_美国_13
+    type: ss
+    server: 38.75.136.135
+    port: 8091
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id018
+    name: 🇺🇸_US_美国_14
+    type: ss
+    server: 38.75.136.135
+    port: 443
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id019
+    name: 🇺🇸_US_美国_15
+    type: ss
+    server: 38.75.136.135
+    port: 6379
+    password: zDNVedRFPQexG9v
+    cipher: aes-256-gcm
+  - &id020
     name: 🇬🇧_GB_英国_1
     type: ss
-    server: 198.244.228.191
+    server: 198.244.231.24
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id008
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 198.244.231.27
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id009
+  - &id021
     name: 🇫🇷_FR_法国_5
     type: ss
     server: 37.59.21.131
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id010
-    name: 🇬🇧_GB_英国_3
-    type: ss
-    server: 198.244.231.26
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: ss
-    server: 91.194.161.7
-    port: 8388
-    password: OWJlYjYy
-    cipher: chacha20-ietf-poly1305
-  - &id012
-    name: 🇫🇷_FR_法国_6
-    type: ss
-    server: 162.19.204.83
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_7
-    type: ss
-    server: 51.159.222.35
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇬🇧_GB_英国_4
-    type: ss
-    server: 198.244.231.24
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇫🇷_FR_法国_8
-    type: ss
-    server: 135.125.172.153
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇫🇷_FR_法国_9
-    type: ss
-    server: 51.159.221.227
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇫🇷_FR_法国_10
-    type: ss
-    server: 162.19.59.162
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id018
-    name: 🇫🇷_FR_法国_11
-    type: ss
-    server: 146.59.110.169
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 52.23.176.97
-    port: 34511
-    password: 5k55aIUjJaaQ8YjE6772wF
-    cipher: chacha20-ietf-poly1305
-  - &id020
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: hk2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: 928dc6ee-495b-446f-9f20-883dedce564a
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇫🇷_FR_法国_12
-    type: ss
-    server: 162.19.204.80
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
   - &id022
-    name: 🇫🇷_FR_法国_13
-    type: ss
-    server: 162.19.204.75
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇫🇷_FR_法国_14
-    type: ss
-    server: 162.19.204.77
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id024
-    name: 🇫🇷_FR_法国_15
-    type: ss
-    server: 37.59.21.130
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id025
-    name: 🇺🇸_US_美国_5
+    name: 🇺🇸_US_美国_16
     type: trojan
-    server: hk3.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
+    server: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
+    port: 8443
     udp: true
-    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
-    sni: 13-231-155-134.nhost.00cdn.com
+    password: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=
+    sni: ams-trojan-grpc.carfin.tech
     skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇫🇷_FR_法国_16
-    type: ss
-    server: 162.19.204.81
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id027
-    name: 🇫🇷_FR_法国_17
-    type: ss
-    server: 162.19.59.166
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id028
-    name: 🇫🇷_FR_法国_18
-    type: ss
-    server: 51.158.200.72
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id029
-    name: 🇫🇷_FR_法国_19
-    type: ss
-    server: 162.19.59.160
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id030
-    name: 🇬🇧_GB_英国_5
-    type: ss
-    server: 198.244.231.28
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id031
-    name: 🇫🇷_FR_法国_20
-    type: ss
-    server: 54.36.174.181
-    port: 6679
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id032
-    name: 🇫🇷_FR_法国_21
-    type: ss
-    server: 54.36.174.181
-    port: 8882
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id033
-    name: 🇫🇷_FR_法国_22
-    type: ss
-    server: 51.159.221.219
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id034
-    name: 🇫🇷_FR_法国_23
-    type: ss
-    server: 54.36.174.181
-    port: 8881
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id035
-    name: 🇫🇷_FR_法国_24
-    type: ss
-    server: 54.36.174.181
-    port: 9101
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
-  - &id036
-    name: 🇫🇷_FR_法国_25
-    type: ss
-    server: 54.36.174.181
-    port: 6697
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id037
-    name: 🇫🇷_FR_法国_26
-    type: ss
-    server: 54.36.174.181
-    port: 5600
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id038
-    name: 🇫🇷_FR_法国_27
-    type: ss
-    server: 54.36.174.181
-    port: 2376
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id039
-    name: 🇫🇷_FR_法国_28
-    type: ss
-    server: 54.36.174.181
-    port: 7306
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id040
-    name: 🇺🇸_US_美国_6
+    network: grpc
+    grpc-opts:
+      grpc-service-name: '@apt_mahdi'
+  - &id023
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: cf-point2.handboy.top
+    port: 2086
+    cipher: auto
+    uuid: 22425357-dc2f-4001-afe2-7f56a7210fca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /asda
+      headers:
+        host: cf-us1.handboy.top
+  - &id024
+    name: 🇺🇸_US_美国_18
     type: vmess
     server: cf-lt.sharecentre.online
     port: 80
@@ -302,38 +195,152 @@ proxies:
     ws-opts:
       path: /api/v3/download.getFile
       headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id041
-    name: 🇺🇸_US_美国_7
+        host: ssrsub.v005.ssrsub.com
+  - &id025
+    name: 🇫🇷_FR_法国_6
     type: ss
-    server: tg_mfbpn_aus2.52vpn.eu.org
+    server: 162.19.204.83
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id026
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 162.19.19.210
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id027
+    name: 🇫🇷_FR_法国_8
+    type: ss
+    server: 162.19.204.80
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id028
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 135.125.172.153
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id029
+    name: 🇫🇷_FR_法国_10
+    type: ss
+    server: 146.59.111.212
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id030
+    name: 🇫🇷_FR_法国_11
+    type: ss
+    server: 162.19.59.164
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id031
+    name: 🇫🇷_FR_法国_12
+    type: ss
+    server: 146.59.81.124
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id032
+    name: 🇫🇷_FR_法国_13
+    type: ss
+    server: 146.59.111.186
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id033
+    name: 🇫🇷_FR_法国_14
+    type: ss
+    server: 162.19.204.77
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id034
+    name: 🇺🇸_US_美国_19
+    type: ss
+    server: 89.187.179.192
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id035
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 198.244.231.74
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id036
+    name: 🇫🇷_FR_法国_15
+    type: ss
+    server: 62.210.88.168
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id037
+    name: 🇺🇸_US_美国_20
+    type: ss
+    server: 35.87.39.181
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id042
-    name: 🇬🇧_GB_英国_6
+  - &id038
+    name: 🇫🇷_FR_法国_16
     type: ss
-    server: 5.181.27.97
-    port: 15100
-    password: GeZbX4Enoc
-    cipher: aes-256-gcm
-  - &id043
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    server: 146.59.110.169
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id039
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: trojan
+    server: amini2.ddns.net
+    port: 2096
+    udp: true
+    password: biwe49r2Tv
+    sni: Qoakq.mookomeilz.homes
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /mskqq
+      headers:
+        host: pANeL159.moOkoMEilz.homes
+    alpn:
+      - http/1.1
+  - &id040
+    name: 🇫🇷_FR_法国_17
+    type: ss
+    server: 57.129.1.20
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id041
+    name: 🇺🇸_US_美国_21
     type: vmess
-    server: ld2.shabijichang.com
+    server: ns1.v2-vip.fun
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /api/v3/download.getFile
       headers:
-        host: ld2.shabijichang.com
-  - &id044
-    name: 🇺🇸_US_美国_8
+        host: ssrsub.v03.ssrsub.com
+  - &id042
+    name: 🇫🇷_FR_法国_18
+    type: ss
+    server: 141.95.99.192
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id043
+    name: 🇺🇸_US_美国_22
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -347,19 +354,6 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id045
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 62.133.60.134
-    port: 10001
-    cipher: auto
-    uuid: 998d0aea-9540-11ee-9111-3fe7c1d34d71
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vpnjantit
 proxy-groups:
   - name: PROXY
     type: select
@@ -429,8 +423,6 @@ proxy-groups:
       - *id041
       - *id042
       - *id043
-      - *id044
-      - *id045
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -479,8 +471,6 @@ proxy-groups:
       - *id041
       - *id042
       - *id043
-      - *id044
-      - *id045
   - name: SELECT
     type: select
     proxies:
@@ -527,8 +517,6 @@ proxy-groups:
       - *id041
       - *id042
       - *id043
-      - *id044
-      - *id045
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
