--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,42 +6,17 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
+    name: 🇩🇪_DE_德国_1
     type: trojan
-    server: 89.116.180.158
+    server: 5.104.108.120
     port: 443
     udp: true
-    password: 097f6b5f-bcf9-4a24-9f0d-d1feaa638d86
-    sni: 3us2.pqjc.buzz
+    password: 81cd0143-601c-44dc-b479-6f28b3b71c64
+    sni: 20-24-33-134.nhost.00cdn.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us2
-      headers:
-        host: 3us2.pqjc.buzz
+    network: tcp
   - &id002
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: 097f6b5f-bcf9-4a24-9f0d-d1feaa638d86
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-      headers:
-        host: 6us3.pqjc.buzz
-  - &id003
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.158.195.96
-    port: 80
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国_1
     type: trojan
     server: 
       8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
@@ -54,104 +29,150 @@ proxies:
     network: grpc
     grpc-opts:
       grpc-service-name: '@apt_mahdi'
+  - &id003
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 35.87.39.181
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id004
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 52.33.95.19
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
   - &id005
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 3.129.250.63
-    port: 56333
-    cipher: auto
-    uuid: 610fcb1f-ffa6-4819-d313-cd530be44a3c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 51.158.195.96
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id006
     name: 🇫🇷_FR_法国_2
     type: ss
     server: 51.158.195.96
-    port: 443
+    port: 110
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id007
     name: 🇫🇷_FR_法国_3
     type: ss
     server: 51.158.195.96
-    port: 110
+    port: 80
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id008
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 198.244.231.34
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_4
     type: ss
     server: 89.187.181.179
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id011
+  - &id009
     name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 51.158.204.70
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 198.244.231.74
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 37.59.21.132
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇫🇷_FR_法国->🇨🇳_CN_中国
     type: ss
     server: 57.129.1.20
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id015
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+  - &id010
+    name: 🇬🇧_GB_英国
+    type: ss
+    server: 198.244.231.74
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 35.90.10.174
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: arshatheroad8pippahotelsinestra.irandarkpro.gq
+    port: 2082
+    cipher: auto
+    uuid: 37eb0303-8420-4691-a773-54ae4a009d36
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id013
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 162.159.192.244
+    port: 443
+    cipher: auto
+    uuid: 673ba378-840f-4928-81f2-203148d07350
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: cowpzmworkers.turbo021.link
+    network: ws
+    ws-opts:
+      path: /673ba378-840f-4928-81f2-203148d07350
+      headers:
+        host: cowochtmtrkers.turbo021.link
+  - &id014
+    name: 🇺🇸_US_美国_7
     type: trojan
-    server: frontend.kuangbiaoyun.com
-    port: 40007
+    server: us1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
     udp: true
-    password: 57edfecf-5694-4a34-8072-54a4f0636a62
-    sni: frontend.kuangbiaoyun.com
+    password: ff981c01-9f9a-4b27-bb09-0d98b7a4b7fa
+    sni: 206.237.5.220
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: trojan
+    server: jp1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: ff981c01-9f9a-4b27-bb09-0d98b7a4b7fa
+    sni: 13-231-155-134.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
   - &id016
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 142.202.48.43
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
+    name: 🇺🇸_US_美国_9
+    type: trojan
+    server: sg1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: ff981c01-9f9a-4b27-bb09-0d98b7a4b7fa
+    sni: 206.237.5.220
+    skip-cert-verify: true
+    network: tcp
   - &id017
-    name: 🇺🇸_US_美国_8
+    name: 🇺🇸_US_美国_10
+    type: trojan
+    server: us2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: ff981c01-9f9a-4b27-bb09-0d98b7a4b7fa
+    sni: 206.237.5.220
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 135.125.172.139
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id019
+    name: 🇺🇸_US_美国_11
     type: trojan
     server: 89.116.161.133
     port: 443
     udp: true
-    password: 097f6b5f-bcf9-4a24-9f0d-d1feaa638d86
+    password: 81cd0143-601c-44dc-b479-6f28b3b71c64
     sni: p1us1.pqjc.buzz
     skip-cert-verify: true
     network: ws
@@ -159,84 +180,14 @@ proxies:
       path: /pq/us1
       headers:
         host: p1us1.pqjc.buzz
-  - &id018
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 5.104.108.109
-    port: 443
-    udp: true
-    password: 097f6b5f-bcf9-4a24-9f0d-d1feaa638d86
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: 52.33.95.19
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
   - &id020
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 5.104.108.120
-    port: 443
-    udp: true
-    password: 097f6b5f-bcf9-4a24-9f0d-d1feaa638d86
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id021
     name: 🇫🇷_FR_法国_6
     type: ss
-    server: 162.19.59.164
+    server: 141.95.125.11
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id022
-    name: 🇫🇷_FR_法国_7
-    type: ss
-    server: 135.125.172.153
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇺🇸_US_美国_10
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: 097f6b5f-bcf9-4a24-9f0d-d1feaa638d86
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-      headers:
-        host: p6us4.pqjc.buzz
-  - &id024
-    name: 🇫🇷_FR_法国_8
-    type: ss
-    server: 135.125.172.139
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id025
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id026
+  - &id021
     name: 🇺🇸_US_美国_12
     type: vmess
     server: 104.21.75.246
@@ -251,6 +202,38 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
+  - &id022
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 135.125.172.153
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id023
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id024
+    name: 🇫🇷_FR_法国_8
+    type: trojan
+    server: 13.36.43.202
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -301,8 +284,6 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
-      - *id025
-      - *id026
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -332,8 +313,6 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
-      - *id025
-      - *id026
   - name: SELECT
     type: select
     proxies:
@@ -361,8 +340,6 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
-      - *id025
-      - *id026
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
